# portmidi

./: CHANGES.md  Makefile  README.md  c.ml  dune  dune-project  portmidi.ml  portmidi.mli  portmidi.opam
c/: dune  function_gen.ml  portmidi_c.ml  portmidi_c_function_descriptions.ml  portmidi_c_type_descriptions.ml  portmidi_c_types.ml  type_gen.ml
config/: .merlin  discover.ml  dune
test/: dune  list_devices.ml  open_input.ml  open_input_read.ml  open_output.ml
