; This is a copy/paste from the luv bindings.
; If you know how to make this shorter please file a bug.

(rule
 (targets c_flags.sexp c_flags.txt c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))

(library
 (name portmidi_c_type_descriptions)
 (public_name portmidi.c_type_descriptions)
 (modules portmidi_c_type_descriptions)
 (libraries ctypes))

(executable
 (name type_gen)
 (modules type_gen)
 (libraries ctypes.stubs ctypes.foreign portmidi_c_type_descriptions))

(rule
 (with-stdout-to
  c_generated_types.c
  (run ./type_gen.exe)))

(rule
 (targets c_generated_types.exe)
 (deps
  (:c c_generated_types.c))
 (action
  (system
    "%{cc} %{c} -I '%{lib:ctypes:.}' -I %{ocaml_where} %{read:c_flags.txt} -o %{targets}")))

(rule
 (with-stdout-to
  portmidi_c_generated_types.ml
  (run ./c_generated_types.exe)))

(library
 (name portmidi_c_function_descriptions)
 (public_name portmidi.c_function_descriptions)
 (modules portmidi_c_generated_types portmidi_c_function_descriptions
   portmidi_c_types)
 (wrapped false)
 ; c_generated_types.exe emits code with unused vars and unbound record labels
 ;  so, we supress them here
 (flags
  (:standard -w -27 -w -9))
 (libraries ctypes portmidi_c_type_descriptions))

(executable
 (name function_gen)
 (modules Function_gen)
 (libraries ctypes.stubs portmidi_c_function_descriptions))

(rule
 (with-stdout-to
  c_generated_functions.c
  (run ./function_gen.exe c portmidi_stub)))

(rule
 (with-stdout-to
  portmidi_c_generated_functions.ml
  (run ./function_gen.exe ml portmidi_stub)))

(library
 (name portmidi_c)
 (public_name portmidi.c)
 (libraries ctypes portmidi_c_function_descriptions)
 (modules portmidi_c portmidi_c_generated_functions)
 (foreign_stubs
  (language c)
  (names c_generated_functions)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))
